# codebasics-qa

./: README.md  helper.py  main.py  model.py  pyproject.toml
altiq/: pyproject.toml
faiss_index/: index.faiss  index.pkl
